syntax = "proto3";

option java_package = "com.wallet.service";

service WithdrawService {

    rpc WithdrawFunds(WithdrawFundsRequest) returns (WithdrawFundsResponse){}

}


message WithdrawFundsRequest {
    int64 userId = 1;
    string amount = 2;
    string currency = 3;
}

message WithdrawFundsResponse {
}